--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.9",
         "easycorp/easyadmin-bundle": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "presta/sitemap-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.3.*",
