--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.path.presentation_images: /uploads/images/presentation
+    router.request_context.host:   charlottesaidi.fr
+    router.request_context.scheme: https
 services:
     # default configuration for services in *this* file
     _defaults:
