--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,11 @@
 # mod_rewrite). Additionally, this reduces the matching process for the
 # start page (path "/") because otherwise Apache will apply the rewriting rules
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
+AuthUserFile /home/keepvii/www/portfolio-beta/.htpasswd
+AuthName "Accès protégé"
+AuthType Basic
+Require valid-user
+
 DirectoryIndex index.php
 
 # By default, Apache does not evaluate symbolic links if you did not enable this
