--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
         "symfony/web-link": "6.3.*",
-        "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/webpack-encore-bundle": "2.x-dev",
         "symfony/yaml": "6.3.*",
         "symfonycasts/reset-password-bundle": "^1.9",
         "twig/extra-bundle": "^2.12|^3.0",
