--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,13 @@ framework:
     php_errors:
         log: true
 
+    handle_all_throwables: true
+    uid:
+      default_uuid_version: 7
+      time_based_uuid_version: 7
+    annotations:
+      enabled: false
+
 when@test:
     framework:
         test: true
